--- a/src/components/ListOfAnswers/ListOfAnswers.module.css
+++ b/src/components/ListOfAnswers/ListOfAnswers.module.css
@@ -5,26 +5,6 @@
   border: 1px solid #999;
 }
 
-.indicator {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #999;
-}
-
-.indicatorTrue {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: green;
-}
-.indicatorFalse {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: red;
-}
-
 .answersList {
   display: flex;
   flex-direction: column;
@@ -36,30 +16,13 @@
   margin: 0;
 }
 
-.answer {
+.actionBlock {
   display: flex;
-  align-items: center;
-  height: 100%;
+  flex-direction: column;
   gap: 1rem;
-  background-color: #444;
-  color: #fff;
-  padding: 10px 10px;
-  cursor: pointer;
 }
 
-.answer:hover {
-  background-color: #999;
-}
-
-.answer:not(:last-child) {
-  border-bottom: 1px solid #999;
-}
-
-.answer:first-child {
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
-}
-.answer:last-child {
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
+.count {
+  font-size: 2rem;
+  color: white;
 }
