--- a/src/components/BirdDescriptionBlock/BirdDescriptionBlock.module.css
+++ b/src/components/BirdDescriptionBlock/BirdDescriptionBlock.module.css
@@ -29,3 +29,26 @@
   border-radius: 5px;
   object-fit: contain;
 }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    flex-direction: row;
+  }
+
+  .topContent {
+    justify-content: stretch;
+    flex-direction: column-reverse;
+  }
+
+  .nameBlock h3,
+  h4 {
+    margin: 0;
+  }
+
+  .actionBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
