--- a/src/routes/Quiz/Quiz.module.css
+++ b/src/routes/Quiz/Quiz.module.css
@@ -11,3 +11,10 @@
   align-items: center;
   justify-content: space-around;
 }
+
+@media (max-width: 768px) {
+  .answersBlock {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
